@@ -1,47 +1,30 @@
-// package com.nhom16.vali.util;
+package com.nhom16.vali.util;
 
-// import jakarta.mail.MessagingException;
-// import jakarta.mail.internet.MimeMessage;
-// import org.springframework.beans.factory.annotation.Autowired;
-// import org.springframework.mail.SimpleMailMessage;
-// import org.springframework.mail.javamail.JavaMailSender;
-// import org.springframework.mail.javamail.MimeMessageHelper;
-// import org.springframework.stereotype.Component;
+import jakarta.mail.MessagingException;
+import jakarta.mail.internet.MimeMessage;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.mail.SimpleMailMessage;
+import org.springframework.mail.javamail.JavaMailSender;
+import org.springframework.mail.javamail.MimeMessageHelper;
+import org.springframework.stereotype.Component;
 
-// public class EmailUtil {
+@Component
+public class EmailUtil {
 
-// @Autowired
-// private JavaMailSender javaMailSender;
+    @Autowired
+    private JavaMailSender javaMailSender;
 
-// public void sendOtpEmail(String email, String otp) throws MessagingException
-// {
-// MimeMessage mimeMessage = javaMailSender.createMimeMessage();
-// MimeMessageHelper mimeMessageHelper = new MimeMessageHelper(mimeMessage);
-// mimeMessageHelper.setTo(email);
-// mimeMessageHelper.setSubject("Verify OTP");
-// mimeMessageHelper.setText("""
-// <div>
-// <a href="http://localhost:8080/verify-account?email=%s&otp=%s"
-// target="_blank">click link to verify</a>
-// </div>
-// """.formatted(email, otp), true);
+    public void sendNewPasswordEmail(String email, String newPassword) throws MessagingException {
+        MimeMessage mimeMessage = javaMailSender.createMimeMessage();
+        MimeMessageHelper mimeMessageHelper = new MimeMessageHelper(mimeMessage);
+        mimeMessageHelper.setTo(email);
+        mimeMessageHelper.setSubject("Your New Password");
+        mimeMessageHelper.setText(String.format("""
+                <div>
+                Your new password is: <b>%s</b>
+                </div>
+                """, newPassword), true);
 
-// javaMailSender.send(mimeMessage);
-// }
-
-// public static void sendSetPasswordEmail(String email) throws
-// MessagingException {
-// MimeMessage mimeMessage = javaMailSender.createMimeMessage();
-// MimeMessageHelper mimeMessageHelper = new MimeMessageHelper(mimeMessage);
-// mimeMessageHelper.setTo(email);
-// mimeMessageHelper.setSubject("Set Password");
-// mimeMessageHelper.setText("""
-// <div>
-// <a href="http://localhost:8080/set-password?email=%s&otp=%s"
-// target="_blank">click link to set password</a>
-// </div>
-// """.formatted(email), true);
-
-// javaMailSender.send(mimeMessage);
-// }
-// }
+        javaMailSender.send(mimeMessage);
+    }
+}
